--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -358,7 +358,7 @@ footer nav ul {
 	width: 100%;
 	height: 100%;
 	background: rgba(0, 0, 0, 0.5);
-	
+
 }
 
 .modal-wrapper {
@@ -398,8 +398,8 @@ footer nav ul {
 
 
 
-.openModal2{
-font-family: 'Syne';
+.openModal2 {
+	font-family: 'Syne';
 	font-weight: 700;
 	color: white;
 	background-color: #1D6154;
@@ -407,38 +407,39 @@ font-family: 'Syne';
 	width: 180px;
 	text-align: center;
 	border-radius: 60px;
-height: 40px;
-border: none;
-cursor: pointer;
-margin: 40px;
+	height: 40px;
+	border: none;
+	cursor: pointer;
+	margin: 40px;
 }
 
- .bodymodal1 {
-     display: flex;
-  flex-direction: column;    
-  align-items: center;      
-  margin-left:10% ;
-  margin-right:10% ;
-  margin-top: 5%;
-  }
+.bodymodal1 {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin-left: 10%;
+	margin-right: 10%;
+	margin-top: 5%;
+}
 
-  .modal-header {
+.modal-header {
 	position: absolute;
 	top: 10px;
 	left: 10px;
 	right: 10px;
 	display: flex;
-	 justify-content: flex-end;
-	 margin-right: 20px;
+	justify-content: flex-end;
+	margin-right: 20px;
 	margin-top: 20px;
 
 }
+
 /**modal2***/
 
 
 .modal-wrapper {
 	position: relative;
-	
+
 	padding-top: 40px;
 }
 
@@ -449,13 +450,14 @@ margin: 40px;
 	right: 10px;
 	display: flex;
 	justify-content: space-between;
-	 margin-right: 20px;
+	margin-right: 20px;
 	margin-top: 20px;
 	margin-bottom: 5%;
 
 }
 
-.modal-header2 button, .modal-header button {
+.modal-header2 button,
+.modal-header button {
 	background: none;
 	border: none;
 	cursor: pointer;
@@ -467,32 +469,34 @@ margin: 40px;
 	height: 200px;
 	flex-direction: column;
 	background-color: #E8F1F6;
-	justify-content: center; 
-  align-items: center; 
+	justify-content: center;
+	align-items: center;
 }
 
-.infoDrop{
-	 display: flex;
-  flex-direction: column; 
-  justify-content: center;
-  align-items: center;     
-  gap: 8px; 
+.infoDrop {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	gap: 8px;
 }
+
 .bodymodal2 {
 	margin-left: 10%;
-	margin-right:10% ;
+	margin-right: 10%;
 }
 
 
 #preview {
 	max-width: 100%;
-  max-height: 100%;
-  display: none; 
-	
+	max-height: 100%;
+	display: none;
+
 	object-fit: contain;
 }
+
 #preview[src] {
-  display: block;
+	display: block;
 }
 
 
@@ -512,10 +516,10 @@ margin: 40px;
 	width: 40%;
 	margin: 0 auto;
 	text-align: center;
-	 border: none;         
-  box-shadow: none;     
-  outline: none;   
-  cursor: pointer;
+	border: none;
+	box-shadow: none;
+	outline: none;
+	cursor: pointer;
 }
 
 h3 {
@@ -530,24 +534,24 @@ h4 {
 
 
 #texte {
-border: none;
+	border: none;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
 
 #choix {
-border: none;
+	border: none;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
 
-.accepter{
+.accepter {
 	margin: 16px;
-	display: flex	;
+	display: flex;
 
-justify-content: center;
+	justify-content: center;
 }
 
-#valider{
-padding: 8px 20px;
+#valider {
+	padding: 8px 20px;
 	border: none;
 	border-radius: 60px;
 	background-color: #A7A7A7;
@@ -556,19 +560,41 @@ padding: 8px 20px;
 	cursor: pointer;
 	width: 50%;
 
-	}
+}
 
-	.formAjout input{
+.formAjout input {
 
-		width: 97%;
-		height:51px ;
-padding-left: 16px;
-	}
+	width: 97%;
+	height: 51px;
+	padding-left: 16px;
+}
 
-	#choix{
-padding-left: 16px;
-		width: 100%;
-		height:51px ;
-background-color: white;
+#choix {
+	padding-left: 16px;
+	width: 100%;
+	height: 51px;
+	background-color: white;
 
-	}
+}
+
+.portofoliohead{
+ display: grid;
+ grid-template-columns:1fr  1fr  1fr  1fr  1fr 
+}
+.portofoliohead h2 {
+	margin: 0px;
+	grid-column: 3;
+}
+.openModal1{
+	border: none;
+	background-color:white ;
+	grid-column: 4;
+	margin-bottom: 30px;
+	margin-right: 100px;
+	cursor: pointer;
+	font-size: 14px;
+}
+
+.openModal1 i {
+	padding-right: 8px;
+}
