--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -579,7 +579,8 @@ h4 {
 
 .portofoliohead{
  display: grid;
- grid-template-columns:1fr  1fr  1fr  1fr  1fr 
+ grid-template-columns:1fr  1fr  1fr  1fr  1fr ;
+ margin-bottom: 32px;
 }
 .portofoliohead h2 {
 	margin: 0px;
@@ -598,3 +599,25 @@ h4 {
 .openModal1 i {
 	padding-right: 8px;
 }
+
+#modeedition {
+  position: fixed; 
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 59px;
+  background-color: black;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+}
+
+body {
+  padding-top: 59px;
+}
+#modeedition i {
+	padding: 16px;
+}
+
