--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -471,9 +471,10 @@ footer nav ul {
 	background-color: #E8F1F6;
 	justify-content: center;
 	align-items: center;
+	margin-bottom: 32px;
 }
 
-.infoDrop {
+#infoDrop {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -513,13 +514,15 @@ footer nav ul {
 	border-radius: 10px;
 	padding: 10px;
 	display: block;
-	width: 40%;
+	width: 173px;
+	height: 36px;
 	margin: 0 auto;
 	text-align: center;
 	border: none;
 	box-shadow: none;
 	outline: none;
 	cursor: pointer;
+	
 }
 
 h3 {
@@ -536,17 +539,16 @@ h4 {
 #texte {
 	border: none;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+	margin-bottom: 32px;
 }
 
-#choix {
-	border: none;
-	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
-}
+
 
 .accepter {
+	
 	margin: 16px;
 	display: flex;
-
+margin-bottom: 40px;
 	justify-content: center;
 }
 
@@ -562,6 +564,7 @@ h4 {
 
 }
 
+
 .formAjout input {
 
 	width: 97%;
@@ -570,11 +573,13 @@ h4 {
 }
 
 #choix {
-	padding-left: 16px;
+	
 	width: 100%;
 	height: 51px;
 	background-color: white;
-
+	margin-bottom: 32px;
+	border: none;
+	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
 
 .portofoliohead{
